--- a/Statistics_HW1.ipynb
+++ b/Statistics_HW1.ipynb
@@ -196,7 +196,37 @@
    "source": [
     "# Задача 2\n",
     "\n",
-    "Докажите, что совместная плотность $g(y, z)$ порядковых статистик $X_{(1)}$ и $X_{(2)}$"
+    "Докажите, что совместная плотность $g(y, z)$ порядковых статистик $X_{(1)}$ и $X_{(2)}$ выборки объема 2 из абсолютно непрерывного распределения с плотностью $f(x)$ равна $2 f(y) f(z)$ при $y < z$ и нулю при $y \\ge z$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Доказательство\n",
+    "Итак, по определению порядковой статистики, \n",
+    "$X_{(1)} = min(X_1, X_2)$, а $X_{(2)} = max(X_1, X_2)$.\n",
+    "\n",
+    "Пусть $F(y, z)$ –– функция распределения порядковых статистик. Тогда \n",
+    "$$F(y, z) = \\mathbb{P}(min(X_1, X_2) \\le y, max(X_1, X_2) \\le z) = \\mathbb{P}((X_1 \\le y \\cup X_2 \\le y) \\cap X_1 \\le z \\cap X_2\\le z) \\ \\  (1)$$\n",
+    "\n",
+    "Рассмотрим два случая:\n",
+    "\n",
+    "* $y \\ge z$ \n",
+    "\n",
+    "    Тогда из $(X_i \\le y) \\cap (X_i \\le z)$ следует, что $X_i \\le z$. А значит, функция распределения $F(y, z)$ будет зависеть только от переменной $z$ и, подсчитывая плотность, получим ноль при дифференцировании по переменной $y$.\n",
+    "* $y < z$ \n",
+    "\n",
+    "    $$(X_i \\le y) \\cap (X_i \\le z) \\ \\Rightarrow \\ X_i \\le y \\ \\ (2)$$ То есть, раскрывая скобки в выражении (1), получим:\n",
+    "    $$F(y, z) = \\mathbb{P}(X_1 \\le y \\cap X_2 \\le z \\cup X_1 \\le z \\cap X_2 \\le y)$$\n",
+    "    По формуле включений-исключений и используя (2), получим\n",
+    "    $$F(y, z) = \\mathbb{P}(X_1 \\le y \\cap X_2 \\le z)  + \\mathbb{P}(X_1 \\le z \\cap X_2 \\le y) - \\mathbb{P}(X_1 \\le y \\cap X_2 \\le y)$$\n",
+    "    \n",
+    "    Если $F(x)$ –– функция распределения, соответствующая плотности $f(x)$, то\n",
+    "    $$F(y, z) = 2F(y)F(z) - (F(y))^2$$\n",
+    "    Тогда, дифференцируя, получим\n",
+    "    $$g(y, z) = 2f(y)f(z)$$\n",
+    "    "
    ]
   },
   {
